<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.ufg.inf.adopet.fragments.DefaultAccountFragment">


    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="150dp"
                app:srcCompat="@mipmap/ic_launcher"
                android:layout_gravity="center_horizontal"
                android:id="@+id/imageView" />

            <TextView
                android:text="@string/login_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/textView3"
                android:padding="8dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <Button
                    android:text="@string/enter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/account_sigin"
                    android:layout_weight="1" />

                <TextView
                    android:text="@string/or"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4"
                    android:layout_weight="0"
                    android:padding="8dp" />

                <Button
                    android:text="@string/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/account_sigup"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</FrameLayout>
