<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_post"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.ufg.inf.adopet.activities.NewPostActivity">
    <include layout="@layout/toolbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="?android:actionBarSize">
        <ImageView
            android:id="@+id/new_post_picture"
            android:layout_width="match_parent"
            android:layout_height="150dp"/>
        <Button
            android:id="@+id/new_post_pick_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_image"
            android:layout_gravity="center"/>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:ems="10"
                android:id="@+id/new_post_title"
                android:hint="@string/title" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:ems="10"
                android:id="@+id/new_post_description"
                android:hint="@string/description" />
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/animal"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
        <Spinner
            android:id="@+id/new_post_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:entries="@array/type_post">
        </Spinner>
    </LinearLayout>
</RelativeLayout>
